




<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:background="@drawable/bak2"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="290dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center"
                app:srcCompat="@drawable/aslisar" />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">





                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:padding="20dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:hint="@string/input_name"

                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content" />


                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:hint="@string/input_address"
                        android:layout_marginTop="30dp"
                        android:layout_height="wrap_content" />


                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:hint="@string/input_mobile"
                        android:layout_marginTop="30dp"
                        android:layout_height="wrap_content" />


                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:hint="@string/input_description"
                        android:layout_marginTop="30dp"
                        android:layout_height="wrap_content" />




                    <Button
                        android:id="@+id/reqest"
                        android:text="@string/request"
                        android:background="@color/white"
                        android:layout_marginTop="50dp"
                        android:onClick="azmon"
                        android:layout_marginBottom="100dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />



                </LinearLayout>



            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"


        >

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button2"
            android:text="Back"
            android:textColor="#ffffff"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="545dp" />

    </LinearLayout>
</RelativeLayout>


<android.support.constraint.Guideline
    android:id="@+id/guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="119dp" />

</RelativeLayout>