<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:background="@drawable/bak2"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="290dp"
                    android:layout_height="80dp"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/aslisar" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:background="#1F4769"
                android:gravity="center"
                android:orientation="horizontal">

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="*">

                    <!-- Column One -->
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="Entekhab Mored Nazar"
                                android:textColor="#ffffff"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="انتخاب مورد نظر شما"
                                android:textColor="#ffffff"
                                android:textSize="12sp" />

                        </LinearLayout>


                    </TableRow>

                </TableLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#15759D"
                android:orientation="horizontal">

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="*">

                    <!-- Column One -->
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView44"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="9:45"
                                android:textColor="#ffffff"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView45"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="  8/20/2018"
                                android:textColor="#ffffff" />

                        </LinearLayout>


                    </TableRow>

                </TableLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:orientation="vertical">


                <ScrollView
                android:layout_width="match_parent"
                    android:padding="20dp"
                android:layout_height="match_parent">



                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <Button
                            android:id="@+id/request_service"
                            android:text="@string/request_service"
                            android:layout_width="match_parent"
                            android:layout_marginBottom="15dp"
                            android:textColor="@color/white"
                            android:background="#1F4769"
                            android:onClick="requestfix"
                            android:layout_height="wrap_content" />



                        <Button
                            android:id="@+id/request_price"
                            android:text="@string/request_price"
                            android:layout_width="match_parent"
                            android:layout_marginBottom="15dp"
                            android:textColor="@color/white"
                            android:background="#1F4769"
                            android:onClick="takeprice"
                            android:layout_height="wrap_content" />


                        <Button
                            android:id="@+id/service_keep"
                            android:text="@string/service_keep"
                            android:layout_width="match_parent"
                            android:background="#1F4769"
                            android:textColor="@color/white"
                            android:layout_marginBottom="15dp"
                            android:onClick="azmon"
                            android:layout_height="wrap_content" />



                        <Button
                            android:id="@+id/products"
                            android:text="@string/products"
                            android:layout_width="match_parent"
                            android:background="#1F4769"
                            android:textColor="@color/white"
                            android:layout_marginBottom="15dp"
                            android:onClick="products"
                            android:layout_height="wrap_content" />


                    </LinearLayout>




                </ScrollView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"


            >

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button2"
                android:text="Back"
                android:textColor="#ffffff"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="545dp" />

        </LinearLayout>
    </RelativeLayout>


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="119dp" />

</RelativeLayout>